fix: prevent wrapping the server hostname into two lines on login screen

--- a/resources/web/static/style.css
+++ b/resources/web/static/style.css
@@ -35,6 +35,10 @@ main {
     background-color: #f8f9fa;
 }
 
+.appCard code {
+    word-break: keep-all;
+}
+
 .row .w-100 {
     margin-top: 2vh;
 }
